--- a/package.json
+++ b/package.json
@@ -68,6 +68,8 @@
     "node": ">= 6.0.0",
     "npm": ">= 3.0.0"
   },
+  "postinstall": "npm run build",
+  "start": "node server.js",
   "browserslist": [
     "> 1%",
     "last 2 versions",
